tests/error/tracing_errors/struct_change_ty_return.py
from guppylang.decorator import guppy


@guppy.struct
class S:
    x: int


@guppy.comptime
def test() -> S:
    s = S(1)
    s.x = 1.0
    return s


test.compile()
